<resources>
    <string name="app_name">Jackal</string>
    <string name="app_description">A convenient way to track your own Rainbow Six stats.</string>
    <string name="sign_up_prompt">Sign Up</string>
    <string name="or">Or</string>
    <string name="add_game">Add Game</string>
    <string name="log_game">Log a Game</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="starting_team">Starting Team</string>
    <string name="attack_vs_defense_stat">Your breakdown of starting sides</string>
    <string name="game_logged">Game successfully logged!</string>
    <string name="starting_side">Starting Side</string>
    <string name="maps">Maps</string>
    <string name="undo">Undo</string>
    <string name="game_actionsheet">Game Action Sheet</string>
    <string name="record_game_result">Record game result</string> <string name="delete_game">Delete Game</string>
    <string name="manage_game">Manage Game</string>
    <string name="game_deleted">Game Deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="did_you_win">Did you win? (Be honest)</string>
    <string name="save">Save</string>
    <string name="no_data_available">No data available yet.\nLog some games to get started!</string>
    <string name="most_played_map">Your most played map: %s</string>
    <string name="game_options_menu_title">Game Options</string>
    <string name="option_export_as_csv">Export Games as CSV</string>
    <string name="delete_all_games">Delete all Games</string>
    <string name="delete_games">Delete Games</string>
    <string name="confirm_delete_all_games">
        Are you sure you want to delete all of your recorded game data?\nThis action cannot be undone.
    </string>
    <string name="win_loss">Win / Loss</string>
    <string name="win_loss_percentage">Your win loss percentages</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="password_confirmation_placeholder">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_requesting">Signing In...</string>
    <string name="submit">Submit</string>
    <string name="submitting">Submitting...</string>
    <string name="welcome_message">
        Welcome to Jackal!\nAn application designed to track all of your gameplay stats in Rainbow Six Siege.
    </string>
    <string name="title_team_stats">Starting Teams</string>
    <string name="title_win_loss">Wins and Losses</string>
    <string name="title_maps">Maps</string>
    <string name="win_loss_overall">Your overall win/loss </string>
    <string name="win_loss_past_week">Your win/loss from the past week</string>
    <string name="dashboard">Dashboard</string>
    <string name="games">Games</string>
    <string name="global">Global Stats</string>
    <string name="settings">Settings</string>
    <string name="overall">Overall</string>
    <string name="past_7_days">Past 7 Days</string>
    <string name="new_game">Log Game</string>
    <string name="what_team_start_on">What side did you start on?</string>
    <string name="what_map_did_you_get">What map did you get?</string>
    <string name="all_games">All Games</string>
    <string name="mark_game_as_won">Mark Game as Won</string>
    <string name="mark_as_lost">Mark Game as Lost</string>
    <string name="preference_email_key">email</string>
    <string name="edit_email">Edit Email</string>
    <string name="bullet">\u2022</string>
    <string name="options">Game Options</string>
    <string name="lost">Lost</string>
    <string name="won">Won</string>
    <string name="games_empty_msg">You haven\'t logged any games yet.</string>
    <string name="games_empty_sub_msg">
        You can get started by pressing the big red button down below!
    </string>

    <plurals name="total_games">
        <item quantity="one">You have recorded %d games</item>
        <item quantity="other">You have recorded %d games</item>
    </plurals>

    <plurals name="games_won">
        <item quantity="one">%d game won</item>
        <item quantity="other">%d games won</item>
    </plurals>

    <plurals name="games_lost">
        <item quantity="one">%d game lost</item>
        <item quantity="other">%d games lost</item>
    </plurals>
</resources>

