<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/start_team_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_team_start_on"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/start_team_radio_group"
        app:layout_constraintTop_toBottomOf="@id/start_team_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_btn_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_btn_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense" />

    </RadioGroup>

    <TextView
        android:id="@+id/map_header"
        app:layout_constraintTop_toBottomOf="@id/start_team_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_map_did_you_get"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/select_map_spinner"
        app:layout_constraintTop_toBottomOf="@id/map_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_game_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:enabled="false"
        style="@style/Widget.Jackal.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>