<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSurface"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:strokeColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/start_team_label"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_team_start_on" />

            <RadioGroup
                android:id="@+id/team_radio_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/team_atk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attack" />

                <RadioButton
                    android:id="@+id/team_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defense" />
            </RadioGroup>

            <TextView
                android:id="@+id/map_label"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_map_did_you_get" />

            <Spinner
                android:id="@+id/select_map_spinner"
                app:layout_constraintTop_toBottomOf="@id/map_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_game_submit_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/submit"
        style="@style/Widget.Jackal.Button" />

</androidx.constraintlayout.widget.ConstraintLayout>