<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_email_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:fontFamily="@font/roboto"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        app:layout_constraintTop_toBottomOf="@id/edit_email_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_email_submit_btn"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        style="@style/Widget.Jackal.Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_btn"
        app:layout_constraintLeft_toRightOf="@id/edit_email_submit_btn"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>