<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable name="viewModel" type="com.brolo.jackal.viewmodel.GamesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/winLossEmptyMsg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_empty_msg"
            android:visibility="@{viewModel.allGames.size() == 0 ? View.VISIBLE : View.GONE}"
            style="@style/Header2"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/winLossEmptySubMsg"
            app:layout_constraintTop_toBottomOf="@id/winLossEmptyMsg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_empty_sub_msg"
            android:visibility="@{viewModel.allGames.size() == 0 ? View.VISIBLE : View.GONE}"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/spacing_1"
            android:paddingHorizontal="@dimen/spacing_3"
            style="@style/BodyText1"
            tools:visibility="gone" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/winLossPieChart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/chart"
            android:layout_height="@dimen/chart"
            android:visibility="@{viewModel.allGames.size() == 0 ? View.GONE : View.VISIBLE}" />

        <com.brolo.jackal.ui.components.ChartLegend
            android:id="@+id/winLossLegendLost"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.allGames.size() == 0 ? View.GONE : View.VISIBLE}"
            app:background_color="@color/colorMaterialBlue"
            app:legend_title="@string/lost" />

        <com.brolo.jackal.ui.components.ChartLegend
            android:id="@+id/winLossLegendWon"
            app:layout_constraintTop_toBottomOf="@id/winLossLegendLost"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.allGames.size() == 0 ? View.GONE : View.VISIBLE}"
            app:background_color="@color/colorMaterialOrange"
            app:legend_title="@string/won" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>